infra/k8s/set-1/products-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-mongo
  template:
    metadata:
      labels:
        app: products-mongo
    spec:
      containers:
        - name: products-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-service
spec:
  type: ClusterIP
  selector:
    app: products-mongo
  ports:
    - name: products-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
