infra/k8s/set-1/seed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seed
  template:
    metadata:
      labels:
        app: seed
    spec:
      containers:
        - name: seed
          image: orbitelco/seed
---
apiVersion: v1
kind: Service
metadata:
  name: seed-srv
spec:
  type: ClusterIP
  selector:
    app: seed
  ports:
    - name: seed
      protocol: TCP
      port: 3000
      targetPort: 3000
