infra/k8s/set-1/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: orbital.dev
      http:
        paths:
          - path: /api/products/v2/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 3000
          - path: /api/orders/v2/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-service
                port:
                  number: 3000
          - path: /api/inventory/v2/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 3000
          - path: /api/seeddata/v2/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: seed-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
